# TwitchWatch

./: .gitmodules  CMakeLists.txt  main.cpp  mainwin.cpp  mainwin.h  srlirc.cpp  srlirc.h  streamwatch.cpp  streamwatch.h  twitchirc.cpp  twitchirc.h
cmake/Modules/: FindFestival.cmake
qtspeech/: CMakeLists.txt  QtSpeech  QtSpeech.h  QtSpeech_mac.cpp  QtSpeech_unx.cpp  QtSpeech_unx.h  QtSpeech_win.cpp
